<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.fold.remotecontrolandroid.LoginIPActivity"
    android:background="#222222">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/IP_login_form" android:layout_width="match_parent"
            android:layout_height="0dp" android:orientation="vertical">

            <!-- A numberDecimal field to enter an IP address into -->
            <AutoCompleteTextView android:id="@+id/ip" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="IP Address"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:textColor="#ffffff"
                android:textIsSelectable="false"
                android:textColorHint="#efefef" />

            <!-- A text field to enter a password into, if desired -->
            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#efefef" />

            <!-- A button to submit the given IP address and password, and attempt a connection -->
            <Button android:id="@+id/IP_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="Connect"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#888888" />

            <!-- A button to open a tutorial -->
            <Button
                android:id="@+id/tutorialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tutorial"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#78AB46" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
